--- a/page-address.html
+++ b/page-address.html
@@ -1,6 +1,6 @@
-<a href="#" class="btn btn-success btn-lg">Reported By</a>
-<a href="#about" class="btn btn-primary btn-lg btn-disabled" disabled="disabled" >Address Reported</a>
-<a href="#contact" class="btn btn-primary btn-lg">Complaint</a>
+<a href="#" class="btn btn-success btn-sm">Reported By</a>
+<a href="#about" class="btn btn-primary btn-sm btn-disabled" disabled="disabled" >Address Reported</a>
+<a href="#contact" class="btn btn-primary btn-sm">Complaint</a>
 <h2>Address to Report</h2>
     <form name="addressForm" class="form-addressReported" ng-submit="submitForm(addressForm.$valid)" novalidate>
 
@@ -46,3 +46,5 @@
         </div>
       
     </form>
+	</div>
+	
