--- a/page-complaint.html
+++ b/page-complaint.html
@@ -1,6 +1,6 @@
-<a href="#" class="btn btn-success btn-lg">Reported By</a>
-<a href="#about" class="btn btn-success btn-lg">Address Reported</a>
-<a href="#contact" class="btn btn-primary btn-lg btn-disabled " disabled="disabled">Complaint</a>
+<a href="#" class="btn btn-success btn-sm">Reported By</a>
+<a href="#about" class="btn btn-success btn-sm">Address Reported</a>
+<a href="#contact" class="btn btn-primary btn-sm btn-disabled " disabled="disabled">Complaint</a>
 <h2>Complaint</h2>
     <form name="complaintForm" class="form-complaintReported" ng-submit="submitForm(complaintForm.$valid)" novalidate>
         <!-- TYPE OF PROBLEM -->
