--- a/page-person.html
+++ b/page-person.html
@@ -1,6 +1,6 @@
-<a href="#" class="btn btn-primary btn-lg btn-disabled" disabled="disabled" >Reported By</a>
-<a href="#about" class="btn btn-primary btn-lg">Address Reported</a>
-<a href="#contact" class="btn btn-primary btn-lg">Complaint</a>
+<a href="#" class="btn btn-primary btn-sm btn-disabled" disabled="disabled" >Reported By</a>
+<a href="#about" class="btn btn-primary btn-sm">Address Reported</a>
+<a href="#contact" class="btn btn-primary btn-sm">Complaint</a>
 <h2>Reported By</h2>
 
     <form name="userForm" class="form-personReporting" ng-submit="submitForm(userForm.$valid)" novalidate>
