--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 
 <!-- apply our angular app -->
 <body ng-app='codeEnforcementComplaintApp'> 
+<div class="row">
+<div class="col-xs-6 col-md-4">
 	<h1>Code Enforcement</h1>
     <!-- inject our views using ng-view -->
 	<!-- each angular controller applies a different class here -->
 	<div class='page {{ pageClass }}' ng-view></div>
-
+</div>
+</div>
 </body>
 </html>
